# Scanner

./: CMakeLists.txt  README.md  code.txt  error_logs.json  main.cpp  scanner.cpp  scannerr.cpp  tokens.json
include/: classified_word.hpp  include.hpp  language.hpp  scanner.hpp
src/: classified_word.cpp  language.cpp  scanner.cpp
